...
        android:gravity="bottom"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <EditText
            android:id="@+id/txtfirstname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:backgroundTint="@android:color/transparent"
            android:hint="First Name"
...
            android:layout_marginStart="30dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="30dp"
            android:background="#B1B1B1" />

        <EditText
            android:id="@+id/txtlastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:backgroundTint="@android:color/transparent"
            android:hint="Last Name"
...
            android:layout_marginStart="30dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="30dp"
            android:background="#B1B1B1" />

        <EditText
            android:id="@+id/txtaddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:backgroundTint="@android:color/transparent"
            android:hint="Current Address"
...
            android:layout_marginTop="0dp"
            android:layout_marginEnd="30dp"
            android:background="#B1B1B1" />


        <EditText
            android:id="@+id/txtage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:backgroundTint="@android:color/transparent"
            android:hint="Age"
...
            android:layout_marginStart="30dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="30dp"
            android:background="#B1B1B1" />

        <EditText
            android:id="@+id/txtphone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:backgroundTint="@android:color/transparent"
            android:hint="Phone Number"
...
            android:layout_marginStart="30dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="30dp"
            android:background="#B1B1B1" />

        <EditText
            android:id="@+id/txtemail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:backgroundTint="@android:color/transparent"
            android:hint="Email"
...
            android:layout_marginStart="30dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="30dp"
            android:background="#B1B1B1" />

        <EditText
            android:id="@+id/txtgender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:backgroundTint="@android:color/transparent"
            android:hint="Gender"
...
            android:layout_marginStart="30dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="30dp"
            android:background="#B1B1B1" />

        <EditText
            android:id="@+id/txtweight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:backgroundTint="@android:color/transparent"
            android:hint="Weight(kg)"
...
            android:layout_marginStart="30dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="30dp"
            android:background="#B1B1B1" />

        <EditText
            android:id="@+id/txtheight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:backgroundTint="@android:color/transparent"
            android:hint="Height(cm)"
...
            android:layout_marginStart="30dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="30dp"
            android:background="#B1B1B1" />

        <EditText
            android:id="@+id/txtbloodgroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:backgroundTint="@android:color/transparent"
            android:hint="Blood Group(O+,A+)"
...
            android:layout_marginStart="30dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="30dp"
            android:background="#B1B1B1" />

        <EditText
            android:id="@+id/txtusername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:backgroundTint="@android:color/transparent"
            android:hint="Username"
...
            android:layout_marginStart="30dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="30dp"
            android:background="#B1B1B1" />

        <EditText
            android:id="@+id/txtpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:backgroundTint="@android:color/transparent"
            android:hint="Password"
...
            android:layout_marginStart="30dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="30dp"
            android:background="#B1B1B1" />

        <EditText
            android:id="@+id/etConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:backgroundTint="@android:color/transparent"
            android:hint="Confirm Password"
...
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp">

            <Button
                android:id="@+id/btnsignup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_centerInParent="true"
                android:layout_marginStart="30dp"
...
